test/compile-fail/exp__record.he
fn main
{
    def Blah = int
    let a = Blah{ x = 10, y = 11 };             //~ ERROR 3002

    def Point = { x: int, y: int }
    let b = Point { x = 10, y = "nonono" };     //~ ERROR 3001

    ret 0;
}
